log/build_2025-09-17_14-00-42/low_level/stderr.log
  File "/home/bagus/ichimonji/odometry/install/low_level/lib/python3.10/site-packages/low_level/learn_mavros.py", line 4
    from std_msgs.msg import Float64
    ^^^^
SyntaxError: invalid syntax

